--- a/hamlet-cli.cabal
+++ b/hamlet-cli.cabal
@@ -1,9 +1,9 @@
 name:                hamlet-cli
 version:             0.1.0.0
-synopsis:            Simple project template from stack
+synopsis:            Generate html from hamlet files
 description:         Please see README.md
 homepage:            http://github.com/chreekat/hamlet-cli#readme
-license:             BSD3
+license:             GPL-3
 license-file:        LICENSE
 author:              Bryan Richter
 maintainer:          b@chreekat.net
@@ -12,7 +12,7 @@ category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable hamlet-cli
+executable hamlet
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
